사이트 선택할 수 있는 로그인 페이지로 수정

--- a/app/elements/things-app/things-app.html
+++ b/app/elements/things-app/things-app.html
@@ -274,12 +274,11 @@
             <iron-pages attr-for-selected="data-route" selected="{{route}}" class="content flex5child" id="_content_">
               <base-sso-login data-route="login">
               </base-sso-login>
-              <things-login use-oi-screen class="login-image" oi-screen-path="/index.html" data-route="login"
+              <!--things-login use-oi-screen class="login-image" oi-screen-path="/index.html" data-route="login"
                 route="{{route}}" title="Things" login-path="login" content-type="application/x-www-form-urlencoded"
                 success-route="/" username-input-label="ID" password-input-label="Password" submit-label="sign_up"
                 Reset-label="Reset" brand-name="[[domainAppObj.brand_name]]">
-              </things-login>
-              <mps-home data-route="/"></mps-home>
+              </things-login-->
             </iron-pages>
           </div>
 
