Home mock-up design

--- a/app/elements/things-app/things-app.html
+++ b/app/elements/things-app/things-app.html
@@ -279,6 +279,7 @@
                 success-route="/" username-input-label="ID" password-input-label="Password" submit-label="sign_up"
                 Reset-label="Reset" brand-name="[[domainAppObj.brand_name]]">
               </things-login> -->
+              <base-home data-route="/"></base-home>
             </iron-pages>
           </div>
 
