Master SKU page

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -13,6 +13,9 @@
 <!-- Base Elements -->
 <link rel="import" href="base/base-elements.html">
 
+<!-- Logis Elements -->
+<link rel="import" href="logis/logis-elements.html">
+
 <!-- RabbitMQ Elements -->
 <link rel="import" href="rabbitmq/rabbitmq-elements.html">
 
