--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -1,3 +1,5 @@
 <!-- Logis Element -->
 <link rel="import" href="./anythings-sku.html">
 <link rel="import" href="./anythings-sku-barcd-popup.html">
+<link rel="import" href="./stock-taking.html">
+<link rel="import" href="./rack-cell.html">
