--- a/app/by_pass.html
+++ b/app/by_pass.html
@@ -16,12 +16,9 @@ Copyright © HatioLab Inc. All rights reserved.
     <link rel="shortcut icon" href="./images/icon-cj.png" type="image/x-icon">
     <title id="title">이동중...</title>
     <style>
-      @font-face {
-        font-family: 'cj-font';
-        src: url('./fonts/cj_onlyone_new_body_light_2350.woff');
-      }
+          @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
       html {
-        font-family: 'cj-font';
+        font-family: 'Noto Sans KR';
         display: flex;
         height: 100%;
       }
@@ -89,7 +86,7 @@ Copyright © HatioLab Inc. All rights reserved.
           //   token = param.replace(otpKey, '');
           // } else if (param.indexOf(domainIdKey) === 0) {
           //   domainId = param.replace(domainIdKey, '');
-          // } 
+          // }
           //   else if (param.indexOf(serverUrlKey) === 0) {
           //   serverUrl = param.replace(serverUrlKey, '');
           // }
