--- a/app/elements/base/base-sso-login.html
+++ b/app/elements/base/base-sso-login.html
@@ -81,7 +81,7 @@ Copyright © HatioLab Inc. All rights reserved.
         --iron-icon-height: 20px;
         --iron-icon-width: 20px;
         opacity: .7;
-        fill: var(--things-secondary-color);
+        color:#fff;
       }
 
       paper-button {
