--- a/app/elements/things-layout/things-sidebar-toggle.html
+++ b/app/elements/things-layout/things-sidebar-toggle.html
@@ -10,8 +10,8 @@ Copyright © HatioLab Inc. All rights reserved.
 <link rel="import" href="../../bower_components/things-i18n-msg/things-i18n-msg.html">
 
 <!--
-  Sidebar Toggle을 위한 화면 
-  브랜드 이미지가 표시되고 해당 이미지를 클릭하면 Toggle이 작동하여 Sidebar가 show/hide 동작을 한다. 
+  Sidebar Toggle을 위한 화면
+  브랜드 이미지가 표시되고 해당 이미지를 클릭하면 Toggle이 작동하여 Sidebar가 show/hide 동작을 한다.
 -->
 
 <dom-module id="things-sidebar-toggle">
@@ -19,6 +19,7 @@ Copyright © HatioLab Inc. All rights reserved.
     <style>
       :host {
         display: block;
+        top: 50px;
       }
       paper-button {
         /*background:url(/images/icon-brand.png) no-repeat transparent;*/
