--- a/app/elements/things-recent-page/things-tabs.html
+++ b/app/elements/things-recent-page/things-tabs.html
@@ -93,6 +93,10 @@ Custom property | Description | Default
       }
     </style>
     <!--div class="things-tabs-top"></div-->
+    <!-- <div class="brand">[[brandName]]
+       <img src="/images/icon-cj.png" hidden/>
+     </div> -->
+
     <div class="things-tabs-content" contextmenu="mymenu">
       <slot></slot>
       <div class="tab-add" on-tap="_add" hidden={{!extendable}}>
