--- a/app/elements/things-layout/things-sidebar.html
+++ b/app/elements/things-layout/things-sidebar.html
@@ -55,8 +55,8 @@ Copyright © HatioLab Inc. All rights reserved.
       paper-button {
         display: block;
         border-bottom: 1px solid rgba(0, 0, 0, .15);
-        margin: 0;padding:7px 5px 4px 10px;
-        font-size: 17px;
+        margin: 0;padding:10px 5px 10px 10px;
+        font-size: 15px;
         font-weight:bold;
         text-align: left;
         color:var(--things-sidebar-text-color);
@@ -66,6 +66,8 @@ Copyright © HatioLab Inc. All rights reserved.
         background-color:var(--things-whitegrey-background-color);
         color:#fff;
       }
+
+
       iron-collapse:focus,a:focus{outline:none;}
       paper-button iron-icon {
         @apply --things-small-icon;
@@ -73,10 +75,10 @@ Copyright © HatioLab Inc. All rights reserved.
         margin-right: 4px
       }
       paper-listbox {
-        background: -moz-linear-gradient(top, #3768a5 40%, #2a3646 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top, #3768a5 40%,#2a3646 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom, #3768a5 40%,#2a3646 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        border-top:1px solid #315d94;
+        background: -moz-linear-gradient(top, #312e2e 20%, #252222 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #312e2e 20%,#252222 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #312e2e 20%,#252222 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        border-top:1px solid #312e2e;
         padding:0;
       }
       paper-item:before {
@@ -93,8 +95,15 @@ Copyright © HatioLab Inc. All rights reserved.
         display: block !important;
         min-height:25px !important;
         font-size: 13px !important;
-        color:rgba(255,255,255,.9);
+        color:rgba(255,255,255,.6);
       }
+
+      paper-item:hover{
+        background-color: rgba(255,255,255,.1);
+        color:rgba(255,255,255,1);
+      }
+
+
       paper-item[active]{
         color:#fff;
         font-weight:bold;
