--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -83,7 +83,9 @@ paper-menu {
 paper-menu iron-icon {
     margin-right: 33px;
     opacity: 0.54;
+    /* color: #fff; */
 }
+
 
 paper-menu a {
     @apply(--layout-horizontal);
