--- a/app/elements/things-app/things-app.html
+++ b/app/elements/things-app/things-app.html
@@ -55,7 +55,7 @@
       }
 
       iron-pages * {
-        @apply --layout-flexå
+        @apply --layout-flex
       }
 
       ::shadow things-resource-combo.things-profile-dialog iron-icon {
@@ -195,9 +195,6 @@
         top: -1px;
       }
 
-
-
-
       @media screen and (max-width:760px) {
         paper-toolbar {
           background: var(--things-secondary-color);
@@ -212,10 +209,6 @@
           color: #fff !important;
           font-size: 26px !important;
           font-weight: bold !important;
-        }
-
-
-
         }
       }
 
