사용자 페이지 추가
1

--- a/app/elements/base/base-elements.html
+++ b/app/elements/base/base-elements.html
@@ -1,9 +1,10 @@
 <!-- Base Element -->
-<link rel="import" href="./base-sso-login.html">
-<link rel="import" href="./base-home.html">
-<link rel="import" href="./base-common-code.html">
-<link rel="import" href="./euc-procedure.html">
-<link rel="import" href="./base-log-viewer.html">
-<link rel="import" href="./firmware-deployment.html">
-<link rel="import" href="./ptl-test.html">
-<link rel="import" href="./print-report.html">
+<link rel="import" href="./base-sso-login.html" />
+<link rel="import" href="./base-home.html" />
+<link rel="import" href="./base-common-code.html" />
+<link rel="import" href="./euc-procedure.html" />
+<link rel="import" href="./base-log-viewer.html" />
+<link rel="import" href="./firmware-deployment.html" />
+<link rel="import" href="./ptl-test.html" />
+<link rel="import" href="./print-report.html" />
+<link rel="import" href="./system-user.html" />
