--- a/app/elements/things-recent-page/things-tabs.html
+++ b/app/elements/things-recent-page/things-tabs.html
@@ -1,4 +1,4 @@
-<link rel="import" href="./things-tab.html">
+<link rel="import" href="./things-tab.html" />
 <!--
 
 Example :
@@ -29,8 +29,8 @@ Custom property | Description | Default
         background: var(--tabs-background-color, #5d83aa);
         overflow: hidden;
         --default-tab-background-color: #afafaf;
-        flex-direction:column;
-        outline:none;
+        flex-direction: column;
+        outline: none;
       }
       * {
         box-sizing: inherit;
@@ -43,7 +43,7 @@ Custom property | Description | Default
         display: flex;
       }
       .things-tabs-top {
-        flex:1;
+        flex: 1;
       }
       .tab-add {
         width: 35px;
@@ -55,16 +55,18 @@ Custom property | Description | Default
         flex-direction: row;
       }
       .tab-add-right {
-        border-left: 7px solid var(--tab-background-color,--default-tab-background-color);
+        border-left: 7px solid
+          var(--tab-background-color, --default-tab-background-color);
         border-top: 16px solid transparent;
       }
       .tab-add-left {
-        border-right: 7px solid var(--tab-background-color,--default-tab-background-color);
+        border-right: 7px solid
+          var(--tab-background-color, --default-tab-background-color);
         border-bottom: 16px solid transparent;
       }
       .tab-add-content {
-        flex:1;
-        background: var(--tab-background-color,--default-tab-background-color);
+        flex: 1;
+        background: var(--tab-background-color, --default-tab-background-color);
       }
       .tab-add:hover .tab-add-content {
         background: var(--tabs-add-hover-color, rgb(105, 101, 101));
@@ -75,31 +77,27 @@ Custom property | Description | Default
       .tab-add:hover .tab-add-left {
         border-right-color: var(--tabs-add-hover-color, rgb(105, 101, 101));
       }
-      button{
-        border:none;
-        border-left:1px solid rgba(0,0,0,.2);
-        border-radius:0px;
-        background:rgba(0,0,0,.25);
-        padding:2px 4px;
-        color:rgba(255,255,255,.5);
-        text-transform:capitalize;
-        font-size:10px;
-        line-height:2;
+      button {
+        border: none;
+        border-left: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 0px;
+        background: rgba(0, 0, 0, 0.25);
+        padding: 2px 4px;
+        color: rgba(255, 255, 255, 0.5);
+        text-transform: capitalize;
+        font-size: 10px;
+        line-height: 2;
       }
-      button:hover{
-        background:rgba(0,0,0,.3);
-        color:rgba(255,255,255,1);
-        cursor:pointer;
+      button:hover {
+        background: rgba(0, 0, 0, 0.3);
+        color: rgba(255, 255, 255, 1);
+        cursor: pointer;
       }
     </style>
-    <!--div class="things-tabs-top"></div-->
-    <!-- <div class="brand">[[brandName]]
-       <img src="/images/icon-cj.png" hidden/>
-     </div> -->
 
     <div class="things-tabs-content" contextmenu="mymenu">
       <slot></slot>
-      <div class="tab-add" on-tap="_add" hidden={{!extendable}}>
+      <div class="tab-add" on-tap="(_add)" hidden="{{ !extendable }}">
         <div class="tab-add-left"></div>
         <div class="tab-add-content"></div>
         <div class="tab-add-right"></div>
@@ -111,8 +109,7 @@ Custom property | Description | Default
 
   <script>
     Polymer({
-
-      is: 'things-tabs',
+      is: "things-tabs",
 
       properties: {
         /**
@@ -121,20 +118,19 @@ Custom property | Description | Default
          */
         extendable: {
           type: Boolean,
-          value: false,
-        },
+          value: false
+        }
       },
 
       hostAttributes: {
-        role: 'tablist',
+        role: "tablist"
       },
 
       listeners: {
-        'tab-close': '_tabClose',
+        "tab-close": "_tabClose"
       },
 
-      ready: function() {
-      },
+      ready: function() {},
 
       /**
        * sent when the user click on the close button of a tab
@@ -144,9 +140,9 @@ Custom property | Description | Default
        */
       _tabClose: function(evt) {
         evt.stopPropagation();
-        evt.target.classList.add('tab-removed');
+        evt.target.classList.add("tab-removed");
         var indx = Polymer.dom(this).children.indexOf(evt.target);
-        this.fire('tab-remove', { index: indx });
+        this.fire("tab-remove", { index: indx });
       },
 
       /**
@@ -155,9 +151,8 @@ Custom property | Description | Default
        * @event tab-add
        */
       _add: function() {
-        this.fire('tab-add');
-      },
-
+        this.fire("tab-add");
+      }
     });
   </script>
 </dom-module>
