--- a/app/elements/things-layout/things-sidebar.html
+++ b/app/elements/things-layout/things-sidebar.html
@@ -136,8 +136,8 @@ Copyright © HatioLab Inc. All rights reserved.
       last-response="{{menus}}">
     </things-ajax>
 
-    <div class="brand">[[brandName]]
-      <img src="/images/icon-cj.png" hidden/>
+    <div class="brand">
+      <!-- [[brandName]] -->
     </div>
 
     <!-- Drawer Scroll Header Panel -->
