--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -153,7 +153,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         position: relative;
         top:5px;
         width:30px;height:30px;
-        background:url('/images/icon-brand.png') no-repeat;
+        /*background:url('/images/icon-brand.png') no-repeat;*/
+        background:none;
         background-size:25px;
       }
       ::shadow .dropdown-content.things-combo{
