--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -38,7 +38,7 @@ Copyright © HatioLab Inc. All rights reserved.
               margin:0;
               padding:0;
               position:fixed;
-              top:0;left:0;
+              top:15px;left:10px;
               z-index:1;
               @apply(--border-radius-clear);
             }
