--- a/app/elements/things-recent-page/things-tabs.html
+++ b/app/elements/things-recent-page/things-tabs.html
@@ -97,7 +97,7 @@ Custom property | Description | Default
 
     <div class="things-tabs-content" contextmenu="mymenu">
       <slot></slot>
-      <div class="tab-add" on-tap="(_add)" hidden="{{ !extendable }}">
+      <div class="tab-add" on-tap="_add" hidden="{{ !extendable }}">
         <div class="tab-add-left"></div>
         <div class="tab-add-content"></div>
         <div class="tab-add-right"></div>
