제품명 수정 및 cj 아이콘 삭제

--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -411,7 +411,7 @@ Copyright © HatioLab Inc. All rights reserved.
               font-size: 18px;
               color: #fff;
             }
-            --things-home-image-url : url(/images/bg-cj.png);
+            --things-home-image-url : url(/images/bg-rail.png);
             --things-home-image-position: 50% 100%;
             --things-home-image:{
               background-color: transparent;
